--- a/Ficha 2/ex4/ex2ficha4css.css
+++ b/Ficha 2/ex4/ex2ficha4css.css
@@ -41,3 +41,14 @@ main aside {
 h2 {
     text-align: center;
 }
+footer {
+    position:fixed;
+    left:0;
+    bottom:0;
+    text-align:center;
+    width:100%;
+    background-color:white;
+    font-size: 0.6em;
+    height:30px;
+    line-height:30px;
+}
